RESOLVED FIXED12109
layer visibility incorrect in some cases
https://bugs.webkit.org/show_bug.cgi?id=12109
Summary layer visibility incorrect in some cases
Antti Koivisto
Reported 2007-01-04 04:22:55 PST
Mishandling of sublayers in RenderLayer::updateVisibilityStatus() can cause a layer that has visible content be marked as not having any.
Attachments
test case (1.97 KB, text/html)
2007-01-04 04:25 PST, Antti Koivisto
no flags
fixed (1.30 KB, patch)
2007-01-04 04:36 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2007-01-04 04:25:16 PST
Created attachment 12212 [details] test case
Antti Koivisto
Comment 2 2007-01-04 04:36:44 PST
Created attachment 12214 [details] fixed My original visibility crawl loop is screwed up, it does not check nodes that are succeeding siblings of layered nodes.
Dave Hyatt
Comment 3 2007-01-05 00:16:21 PST
Comment on attachment 12214 [details] fixed r=me
David Kilzer (:ddkilzer)
Comment 4 2007-01-06 04:26:09 PST
Committed in r18616 by antti with test case LayoutTests/fast/layers/layer-visibility-sublayer.html.
mitz
Comment 5 2007-01-06 05:52:25 PST
The layout test is invalid, giving the same results with and without the patch. Reopening the bug until a valid layout test is checked in.
David Kilzer (:ddkilzer)
Comment 6 2007-01-06 07:42:36 PST
Comment on attachment 12214 [details] fixed Clearing hyatt's r+ so this doesn't show up in commit queue.
Antti Koivisto
Comment 7 2022-01-13 23:18:19 PST
Doesn't seem like the test was ever fixed but we likely have coverage elsewhere by now.
mitz
Comment 8 2022-01-13 23:20:03 PST
OK.
Note You need to log in before you can comment on or make changes to this bug.