LayoutTests:

Reviewed by hyatt.

        Test for http://bugs.webkit.org/show_bug.cgi?id=12109
        layer visibility incorrect in some cases

        * fast/layers/layer-visibility-sublayer-expected.checksum: Added.
        * fast/layers/layer-visibility-sublayer-expected.png: Added.
        * fast/layers/layer-visibility-sublayer-expected.txt: Added.
        * fast/layers/layer-visibility-sublayer.html: Added.

WebCore:

        Reviewed by hyatt.

        http://bugs.webkit.org/show_bug.cgi?id=12109

        Fix layer visibility in some cases with nested layers.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateVisibilityStatus):



Canonical link: https://commits.webkit.org/15641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18616 268f45cc-cd09-0410-ab3c-d52691b4dbfc